<resources>
    <string name="app_name">Technical Work Central</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Fragment Document Profile -->
    <string name="title_profile">Profile</string>
    <string name="name_profile">Nome completo: </string>
    <string name="nameAnswer_profile">René Descartes</string>
    <string name="age_profile">Idade: </string>
    <string name="ageAnswer_profile">died at 54 years</string>
    <string name="status_profile">Status: </string>
    <string name="statusAnswer_profile">Cursando</string>
    <string name="linkedin_profile">Linkedin</string>
    <string name="email_profile">E-mail</string>
    <!-- Fragment Document Details -->
    <string name="author_details">Autor: </string>
    <string name="authorX_details">René Descartes</string>
    <string name="adviserTeacher_details">Professor Orientador: </string>
    <string name="disciplineTeacher_details">Professor da Disciplina: </string>
    <string name="studyArea_details">Área de Estudo: </string>
    <string name="course_details">Curso: </string>
    <string name="teacherExample_details">Professor X</string>
    <string name="studyExample_details">Programação Web</string>
    <string name="courseExample_details">Ciência da Computação</string>
    <string name="title_details">metodo.PDF</string>
    <string name="documentPreview_details">Document preview</string>
    <string name="size_details">4,2MB</string>
    <string name="download_details">DOWNLOAD</string>
    <!-- Fragment Document Register -->
    <string name="documentRegistration_documentRegistration">Cadastro de Trabalho</string>
    <string name="documentName_documentRegistration">Título do Trabalho</string>
    <string name="advisorName_documentRegistration">Nome do Orientador</string>
    <string name="studyArea_documentRegistration">Área de Estudo</string>
    <string name="keyWords_documentRegistration">Palavras-Chave</string>
    <string name="upload_documentRegistration">Upload</string>
    <string name="selectDocument_documentRegistration">Selecione um documento .pdf</string>
    <string name="cancel_documentRegistration">Cancelar</string>
    <string name="register_documentRegistration">Cadastrar</string>
    <!-- Fragment Login -->
    <string name="login_login">LOGIN</string>
    <string name="dontHaveAccount_login">Ainda não tem uma conta?</string>
    <string name="register_login">Cadastre-se</string>
    <string name="email_login">Email</string>
    <string name="password_login">Senha</string>
    <string name="required_login">Obrigátorio</string>
    <string name="signin_login">ENTRAR</string>
    <string name="forgotPassword_login">Esqueci a Senha</string>
    <!-- Fragment Register -->
    <string name="regisiter_register">CADASTRO</string>
    <string name="haveAccount_register">Já possui uma conta?</string>
    <string name="signin_register">Faça login</string>
    <string name="name_register">Nome Completo</string>
    <string name="register_register">CADASTRAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filtrar">Filtrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ano_de_publica_o">Ano de publicação</string>
    <string name="curso">Curso</string>
    <string name="rea_de_estudo">Área de Estudo</string>
    <string name="palavra_chave">Palavra-chave</string>
    <string name="nome_do_orientador">Nome do Orientador</string>
    <string name="nome_do_autor">Nome do Autor</string>
    <string name="blank_error_message">Campos obrigatórios em branco</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="todos">Todos</string>
    <string name="tipo_de_trabalho">Tipo de Trabalho</string>
    <string-array name="courses">
        <item>Todos</item>
        <item>Ciência da Computação</item>
        <item>Sistemas de Informação</item>
    </string-array>
    <string-array name="workTypes">
        <item>Todos</item>
        <item>TCC</item>
        <item>Monografia de Pós Graduação</item>
        <item>Dissertação de Mestrado</item>
        <item>Tese de Doutorado</item>
    </string-array>
</resources>